<resources>
    <string name="app_name" translatable="false"><u>FriendView</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ru_code" translatable="false">+1</string>
    <string name="phone_hint" translatable="false">(---) --- ----</string>
    <string name="register_image" translatable="false">register_image</string>
    <string name="code_hint" translatable="false">- - - - - -</string>
    <string name="enter_code">Enter Verification Code</string>
    <string name="register_toast_enter_phone">Enter Phone Number</string>
    <string name="friends"><u>Friends</u></string>
    <string name="photo"><u>Photo</u></string>
    <string name="gallery"><u>Gallery</u></string>
    <string name="profile"><u>Profile</u></string>
    <string name="friend_name_example" translatable="false">Friend Name</string>
    <string name="friend_icon" translatable="false">Friend icon</string>
    <string name="bother_the_friend" translatable="false">Bother the friend</string>
    <string name="more" translatable="false">more</string>
    <string name="profile_photo" translatable="false">Profile Photo</string>
    <string name="invitation_link">Invitation Link</string>
    <string name="settings">Settings</string>
</resources>