<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_enter_phone_number"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".fragments.EnterPhoneNumberFragment">


    <LinearLayout
        android:id="@+id/register_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">


        <EditText
            android:id="@+id/user_phone_region_code"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/ru_code"
            android:inputType="phone"
            android:text="@string/ru_code"
            android:textColor="@color/white_text"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/user_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:letterSpacing="0.3"
            android:maxLength="10"
            android:textColor="@color/white_text"
            android:textColorHint="@color/light_grey"
            android:textSize="20sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/purple"
            android:src="@drawable/ic_arrow_next"
            android:contentDescription="@string/register_image" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>